--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ margin-bottom: 5rem;}
     margin-top: 3rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     .background-foto {
         background-image: url(../img/foto-inicial.png);
         background-repeat: no-repeat;
@@ -156,16 +156,16 @@ margin-bottom: 5rem;}
     }
 
     .texto-bienvenida {
-        font-size: 2.5rem; /* Reduce el tamaño del texto */
+        font-size: 2rem; /* Reduce el tamaño del texto */
     }
 
     .texto-huinca {
-        font-size: 4rem; /* Reduce el tamaño del texto */
+        font-size: 3.3rem; /* Reduce el tamaño del texto */
     }
 }
 
 /* Para pantallas medianas (por ejemplo, tablets) */
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
     .background-foto {
         background-image: url(../img/foto-inicial.png);
         background-repeat: no-repeat;
@@ -375,7 +375,7 @@ margin-bottom: 5rem;}
 }
 
 /* Estilos para dispositivos pequeños (máx. 500px, móviles) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     .seccion-contenido {
         flex-direction: column; /* Cambia a una columna en tablets */
         align-items: center;
@@ -413,7 +413,7 @@ margin-bottom: 5rem;}
 
     .texto-lado-derecho p {
         font-size: 1rem; /* Reduce ligeramente el tamaño del texto */
-        margin-right: 0; /* Elimina el margen derecho */
+        margin: 15px; /* Elimina el margen derecho */
     }
 
     .boton-ver-mas {
@@ -426,18 +426,18 @@ margin-bottom: 5rem;}
     
 
     .popup-content {
-        margin: 20px;
+        margin: 15px;
     }
     
     
     .popup-grid .small-img img {
-        height: 130px; /* Altura fija para imágenes pequeñas */
+        height: 70px; /* Altura fija para imágenes pequeñas */
         object-fit: cover;
         border-radius: 5px;
     }
     
     .popup-grid .large-img img {
-        height: 270px; /* Altura personalizada para la imagen central */
+        height: 150px; /* Altura personalizada para la imagen central */
         border-radius: 5px;
     }
 
@@ -448,6 +448,7 @@ margin-bottom: 5rem;}
 
     .hostel-titulo-popup {
         font-size: 1.2rem; /* Reduce el tamaño del título */
+        margin-bottom: -0.6rem;
     }
 
     .close-button {
@@ -461,7 +462,7 @@ margin-bottom: 5rem;}
 
 
 /* Estilos para dispositivos medianos (501px - 1024px, tablets) */
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
     .seccion-contenido {
         flex-direction: column; /* Cambia a una columna en tablets */
         align-items: center;
@@ -605,7 +606,7 @@ margin-left: 2rem;
 
 .close-button-2 {
     position: absolute;
-    top: 40px;
+    top: 28px;
     left: 680px;
     font-size: 24px;
     cursor: pointer;
@@ -633,7 +634,7 @@ margin-left: 2rem;
     width: 100%;
     max-width: 700px;
     overflow: hidden;
-    margin: 10px
+    margin: auto;
 }
 
 .carousel-images {
@@ -646,6 +647,7 @@ margin-left: 2rem;
     height: 400px;
     object-fit: cover;
     border-radius: 5px;
+    margin-bottom: 1rem;
 }
 
 .carousel-control {
@@ -737,10 +739,10 @@ a.boton-ver-mas:hover {
 
  }
 
- @media only screen and (max-width: 600px) {
+ @media only screen and (max-width: 500px) {
     .Fondo-habitaciones {
         margin-top: 2rem;
-        height: 1450px;
+        height: auto;
         width: 100%;
     }
     
@@ -766,7 +768,8 @@ a.boton-ver-mas:hover {
         display: flex; /* Cambia a flex para mejorar la alineación */
         flex-direction: column; /* Organiza los elementos verticalmente */
         align-items: center; /* Centra los elementos horizontalmente */
-        padding-bottom: 1rem;    
+        padding-bottom: 1rem;   
+        margin: 15px; 
     }
     
     .imagen-habitaciones {
@@ -802,13 +805,12 @@ a.boton-ver-mas:hover {
 
       .carousel {
         width: 100%;
-        max-width: 520px;
-        margin: 5px
+        max-width: 310px;
     }
     
     .carousel-img {
         min-width: 100%;
-        height: 350px;
+        height: 360px;
     }
     
     .h4-div-box{
@@ -821,19 +823,20 @@ a.boton-ver-mas:hover {
 } 
     
 .close-button-2 {
-    top: 30px;
-    left: 500px;
+    top: 35px;
+    left: auto;
+    right: 30px;
 
 }
 
 }
 
 
- @media only screen and (min-width: 601px) and (max-width: 1024px) {
+ @media only screen and (min-width: 501px) and (max-width: 1024px) {
 
     .Fondo-habitaciones {
         margin-top: 2rem;
-        height: 2000px;
+        height: auto;
         width: 100%;
     }
     
@@ -845,7 +848,8 @@ a.boton-ver-mas:hover {
     .div-box {
         padding: 10px;
         max-width: 600px;
-        padding-bottom: 2rem;    
+        padding-bottom: 2rem;   
+        margin: 20px; 
     }
     
     .imagen-habitaciones {
@@ -866,7 +870,6 @@ a.boton-ver-mas:hover {
     .estrella-marina {
         position: absolute; /* Posiciona el div de forma absoluta */
         right: 1rem; /* Lo alinea a la derecha */
-        transform: translateY(3320%); /* Ajusta para que esté exactamente centrado verticalmente */
         width: 100px; 
         height: auto; 
       }
@@ -882,7 +885,8 @@ a.boton-ver-mas:hover {
     
 .close-button-2 {
     top: 35px;
-    left: 650px;
+    left: auto;
+    right: 30px;
 
 }
  }
@@ -962,7 +966,7 @@ a.boton-ver-mas:hover {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
 
     
       .list-unstyled {
@@ -988,7 +992,7 @@ a.boton-ver-mas:hover {
       }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
     .list-unstyled {
         list-style-type: circle;
         margin-left: 2rem;
@@ -1084,11 +1088,12 @@ a.boton-ver-mas:hover {
     height: auto; /* Mantiene la proporción */
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
 
     .background-marron {
-        height: 145vh;
-        margin-bottom: 3rem;
+        height: auto;
+        max-width: 100%;
+        margin-bottom: 1rem;
     }
     
     .titulo-negro{
@@ -1107,13 +1112,7 @@ a.boton-ver-mas:hover {
     .frame-mapa{
         margin-top: 1rem;
         width: 90%;
-    }
-    
-    
-    .dibujo-concha {
-        position: absolute;
-        left: 85%; /* Centra la imagen horizontalmente */
-        transform: translateY(200px); /* Ajuste preciso para centrar */
+        margin: 20px;
     }
     
     .dibujo-concha img {
@@ -1121,9 +1120,10 @@ a.boton-ver-mas:hover {
     }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
     .background-marron {
-        height: 145vh;
+        height: auto;
+        max-width: 100%;
         margin-bottom: 1rem;
     }
   
@@ -1143,6 +1143,7 @@ a.boton-ver-mas:hover {
     .frame-mapa{
         margin-top: 1rem;
         width: 90%;
+        margin: 20px;
     }
     
     
@@ -1276,7 +1277,7 @@ a.boton-ver-mas:hover {
     border: none; /* Sin borde blanco */
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
 
     .seccion-contenido-nueva {
         display: inline-block;
@@ -1284,6 +1285,7 @@ a.boton-ver-mas:hover {
         justify-content: center;
         padding: 20px;
         width: 100%;
+        height: auto;
         margin-top: 1.5rem;
     }
     
@@ -1308,7 +1310,7 @@ a.boton-ver-mas:hover {
 
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
 
     .seccion-contenido-nueva {
         display: inline-block;
@@ -1564,7 +1566,7 @@ a.boton-ver-mas:hover {
     color: #ffffff !important;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
 
     .custom-section {
         display: block;
@@ -1572,29 +1574,29 @@ a.boton-ver-mas:hover {
         justify-content: center;
         height: 100vh; 
         background-color: #ffffff; 
-        padding: 20px; 
+        padding: 10px; 
         box-sizing: border-box; 
         margin-top: 2.5rem;
     }
     
     
     .custom-section h2 {
-        font-size: 1.6rem !important;
-        margin-top: 2rem;
+        font-size: 1.3rem !important;
     }
 
     
     .image-right {
         flex: 1; 
-        max-height: 450px; 
+        width: 100%;
         object-fit: cover;
-        padding: 20px; 
+        padding: 10px; 
         box-sizing: border-box; 
-        border-radius: 2rem;
+        border-radius: 15px;
     }
 
     .list-unstyled .blanco{
         font-size: 1rem;
+        margin: -0.5rem;
     }
     
     
@@ -1619,11 +1621,11 @@ a.boton-ver-mas:hover {
       }
       
       .footer-wrapper {
-        margin-top: -100vh;
+        margin-top: -110vh;
       }
       
       .cta-wrapper {
-        height: 300vh;
+        height: 320vh;
         margin-block: -100vh;
 
       }
@@ -1656,7 +1658,7 @@ a.boton-ver-mas:hover {
         font-size: 1rem;
         color: #464646;
         line-height: 1.6;
-        margin-left: 2rem;
+        margin-left: 1rem;
     
     
     }
@@ -1666,7 +1668,7 @@ a.boton-ver-mas:hover {
         font-weight: 500;
         font-size: 2rem;
         color: #464646;
-        margin-left: 2rem;
+        margin-left: 1rem;
         margin-bottom: 1.2rem;
     
     }
@@ -1678,7 +1680,7 @@ a.boton-ver-mas:hover {
  }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
     .custom-section {
         display: block;
         align-items: center;
